Remove guava usage from testplugins